swagger working, && changed "newRows" to "rows" UC
